Updated database settings to use environment variables

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 GEMINI_API_KEY=AIzaSyCkZ1h0JQthzoXxPAd_4Boky8BsCwaAfqk
+PGDATABASE=gradeguide
+PGUSER=postgres
+PGPASSWORD=123456
+PGHOST=localhost
+PGPORT=5432
