--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ PGUSER=postgres
 PGPASSWORD=123456
 PGHOST=localhost
 PGPORT=5432
+DATABASE_URL=postgresql://postgres:IpoiXSyYYmBUSbFjUJsJafvOqNnELuxV@monorail.proxy.rlwy.net:50120/railway
